[package]
name = "async_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
async-task = { version = "1.3.0", default-features = false}
futures = { version = "0.3.25", default-features = false, features = ["async-await"]}

buddy_system_allocator = "0.6"
